qttools-opensource-src (5.5.1-3) UNRELEASED; urgency=medium


 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 21 Oct 2015 22:03:20 +0300

qttools-opensource-src (5.5.1-2) experimental; urgency=medium

  * Re upload as source+all. We need to fix building all packages
    alone.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sat, 17 Oct 2015 16:43:25 -0300

qttools-opensource-src (5.5.1-1) experimental; urgency=medium

  [ Felix Geyer ]
  * Move Qt5LinguistTools cmake files from -dev to -dev-tools package.
    (Closes: #793347)

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * New upstream release.
    - Bump Qt build dependencies.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sat, 17 Oct 2015 16:13:49 -0300

qttools-opensource-src (5.5.0-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.5.0.
  * Remove symbols missing with GCC 5 from libqt5designer5.symbols.
  * Update .install files for the new release.
  * Update debian/copyright.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 24 Aug 2015 11:48:51 +0300

qttools-opensource-src (5.4.2-3) unstable; urgency=medium

  * Update symbols files with buildds' logs.
  * Update symbols files with current build log against gcc5 (Closes: #791261).

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 03 Aug 2015 23:19:15 -0300

qttools-opensource-src (5.4.2-2) unstable; urgency=medium

  * Upload to unstable.
  * Update symbols files with buildds' logs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 23 Jun 2015 17:16:46 -0300

qttools-opensource-src (5.4.2-1) experimental; urgency=medium

  [ Dmitry Shachnev ]
  * Add one new symbol to debian/libqt5help5.symbols.
  * Remove debian/copyright entry for arthurplugin example, which no
    longer exists.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * New upstream release.
    - Bump Qt build dependencies.