@@ -1,5 +1,8 @@
 qttools-opensource-src (5.5.1-3) UNRELEASED; urgency=medium
 
+  [ Dmitry Shachnev ]
+  * Make arch-indep builds possible, by building qhelpgenerator before
+    attempting to build docs.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 21 Oct 2015 22:03:20 +0300
 
